# fgv-projetos-20261

./: .env  .gitignore  lecture_notes_task1_gaps.md  rds_connection.env
assignment_1/solution_task_1/: .env.example  README.md  lecture_notes.md  task_1_rds_solution.ipynb
assignment_1/solution_task_1/scripts/: load_data.py  provision_rds.py  validate.py
assignment_1/task_1/: .gitignore  01_instance.py  02_loader.py  03_validate.py  aws_net.py  load_data.py  rds.md  requirements.txt  validate_data.py
assignment_1/task_1/data/: mysqlsampledatabase.sql
assignment_1/task_1/final/: provision_rds.py  requirements.txt
assignment_1/task_1/grupo_3/: .gitignore
assignment_1/task_1/scripts/: common.py  load_classicmodels.py  load_data.py  provision_rds.py  (+2 more)
assignment_1/task_2/: 4_etl_job.py  README.md  data_pipeline.md  main.tf  outputs.tf  validate_etl.py  variables.tf
assignment_1/task_2/grupo_2/final/: README.md  pyproject.toml
assignment_1/task_2/grupo_2/final/scripts/: load_classicmodels.py  run_glue_job.py  validate_pipeline.py
assignment_1/task_2/grupo_2/final/terraform/: versions.tf
assignment_1/task_2/grupo_2/sillas/: .env.example  README.md  pyproject.toml
assignment_1/task_2/grupo_2/sillas/glue/: etl_job.py
assignment_1/task_2/grupo_2/sillas/scripts/: validate_pipeline.py
assignment_1/task_2/grupo_2/sillas/terraform/: main.tf  terraform.tfvars.example  variables.tf
assignment_1/task_3/: query.md
grupo_x/Gerardo_Mikael/: load_data.py  provision_rds.py  requirements.txt  validate.py
task_1/: rds.md
task_1/grupo_5/: load_data.py
(+423 files in other folders)
