[project]
name = "task2-sillas"
version = "0.1.0"
description = "Task 2 ETL pipeline for classicmodels"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "mysql-connector-python>=9.0.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
